force-app/main/default/objects/T_E__c/T_E__c.object-meta.xml
<CustomObject>
    <description>Travel and Expense module for Sales and Marketing</description>
    <label>T&amp;E</label>
    <nameField>
        <displayFormat>TE-{0000000000}</displayFormat>
        <label>T&amp;E</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T&amp;E</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>