force-app/main/default/objects/T_E__c/fields/Account_1__c.field-meta.xml
<CustomField>
    <fullName>Account_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account #1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>T&amp;E</relationshipLabel>
    <relationshipName>T_E</relationshipName>
    <type>Lookup</type>
</CustomField>