force-app/main/default/objects/T_E__c/fields/Account_1_OPEN_ACTIVITIES_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Account_1_OPEN_ACTIVITIES_TEXT__c</fullName>
    <label>Account #1 OPEN ACTIVITIES</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>