force-app/main/default/objects/T_E__c/fields/Account_2__c.field-meta.xml
<CustomField>
    <fullName>Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account #2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>T&amp;E (Account #2)</relationshipLabel>
    <relationshipName>T_E2</relationshipName>
    <type>Lookup</type>
</CustomField>