force-app/main/default/objects/T_E__c/fields/Account_3__c.field-meta.xml
<CustomField>
    <fullName>Account_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account #3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>T&amp;E (Account #3)</relationshipLabel>
    <relationshipName>T_E1</relationshipName>
    <type>Lookup</type>
</CustomField>