force-app/main/default/objects/T_E__c/fields/Account_4_Open_Activities__c.field-meta.xml
<CustomField>
    <fullName>Account_4_Open_Activities__c</fullName>
    <formula>Account_4__r.of_Open_Activities__c</formula>
    <label>Account #4 Open Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>