force-app/main/default/objects/T_E__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Account_1__r.of_Open_Activities__c</formula>
    <label>Account #1 Open Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>