force-app/main/default/objects/T_E__c/fields/Days_to_Submit__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Submit__c</fullName>
    <formula>Expense_Date__c - Ledger_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Submit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>