force-app/main/default/objects/T_E__c/fields/Divisional_Leader__c.field-meta.xml
<CustomField>
    <fullName>Divisional_Leader__c</fullName>
    <formula>Owner:User.Divisional_Sales_Leader__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Divisional Leader</label>
    <type>Text</type>
</CustomField>