force-app/main/default/objects/T_E__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <formula>Owner:User.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee ID</label>
    <type>Text</type>
</CustomField>