force-app/main/default/objects/T_E__c/fields/Est_T_E_Amount_Air_Train_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Est_T_E_Amount_Air_Train_Hotel__c</fullName>
    <formula>Flight_Cost__c + ( Hotel_Cost__c * Number_of_Nights__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est T&amp;E Amount (Air/Train + Hotel)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>