force-app/main/default/objects/T_E__c/fields/Expense_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Expense_Purpose__c</fullName>
    <label>Expense Purpose</label>
    <length>150</length>
    <type>Text</type>
</CustomField>