force-app/main/default/objects/T_E__c/fields/Flight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Flight_Cost__c</fullName>
    <label>Estimated Air/Train Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>