force-app/main/default/objects/T_E__c/fields/Hotel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Cost__c</fullName>
    <label>Hotel $Rate/Night</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>