force-app/main/default/objects/T_E__c/fields/Ledger_Date__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Date__c</fullName>
    <label>Ledger Date</label>
    <type>Date</type>
</CustomField>