force-app/main/default/objects/T_E__c/fields/Opportunity_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity #1</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>T&amp;E</relationshipLabel>
    <relationshipName>T_E</relationshipName>
    <type>Lookup</type>
</CustomField>