force-app/main/default/objects/T_E__c/fields/Opportunity_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity #2</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>T&amp;E (Opportunity #2)</relationshipLabel>
    <relationshipName>T_E1</relationshipName>
    <type>Lookup</type>
</CustomField>