force-app/main/default/objects/T_E__c/fields/Opportunity_3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity #3</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>T&amp;E (Opportunity #3)</relationshipLabel>
    <relationshipName>T_E2</relationshipName>
    <type>Lookup</type>
</CustomField>