force-app/main/default/objects/T_E__c/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName &amp;&quot; &quot;&amp; Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager</label>
    <type>Text</type>
</CustomField>