force-app/main/default/objects/T_E__c/fields/Regional_Leader__c.field-meta.xml
<CustomField>
    <fullName>Regional_Leader__c</fullName>
    <formula>Owner:User.Regional_Sales_Leader__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional Leader</label>
    <type>Text</type>
</CustomField>