force-app/main/default/objects/T_E__c/fields/Rep_Active__c.field-meta.xml
<CustomField>
    <fullName>Rep_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Active</label>
    <type>Checkbox</type>
</CustomField>