force-app/main/default/objects/T_E__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>