force-app/main/default/objects/T_E__c/fields/Sales_Leader__c.field-meta.xml
<CustomField>
    <fullName>Sales_Leader__c</fullName>
    <formula>Owner:User.Sales_Leader__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Leader</label>
    <type>Text</type>
</CustomField>