force-app/main/default/objects/T_E__c/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <formula>Owner:User.Sales_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Team</label>
    <type>Text</type>
</CustomField>