force-app/main/default/objects/T_E__c/fields/TEA_Number__c.field-meta.xml
<CustomField>
    <fullName>TEA_Number__c</fullName>
    <label>TEA Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>