force-app/main/default/objects/T_E__c/fields/Travelling_From__c.field-meta.xml
<CustomField>
    <fullName>Travelling_From__c</fullName>
    <label>Travelling From</label>
    <length>30</length>
    <type>Text</type>
</CustomField>