force-app/main/default/objects/T_E__c/fields/Travelling_To__c.field-meta.xml
<CustomField>
    <fullName>Travelling_To__c</fullName>
    <label>Travelling To</label>
    <length>30</length>
    <type>Text</type>
</CustomField>