force-app/main/default/objects/T_E__c/fields/Vendor_Location__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Location__c</fullName>
    <label>Vendor Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>