force-app/main/default/objects/T_E__c/recordTypes/T_E_Request.recordType-meta.xml
<RecordType>
    <fullName>T_E_Request</fullName>
    <active>true</active>
    <label>T&amp;E Request</label>
</RecordType>